force-app/main/default/objects/Loop__DDP__c/Loop__DDP__c.object-meta.xml
<CustomObject>
    <customHelpPage>Loop__aboutloop</customHelpPage>
    <description>Dynamic Document Packages powered by Drawloop Technologies, Inc.</description>
    <label>DDP</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DDPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>