force-app/main/default/objects/Loop__DDP__c/fields/Loop__Allow_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Loop__Allow_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This allows the user to add attachments from the associated objects to the end of the DDP.</inlineHelpText>
    <label>Allow Attachments</label>
    <type>Checkbox</type>
</CustomField>