force-app/main/default/objects/Loop__DDP__c/fields/Loop__DDP_BCC__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP_BCC__c</fullName>
    <inlineHelpText>This will default the &apos;BCC&apos; field when delivering the DDP via email. Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
    <label>BCC</label>
    <type>TextArea</type>
</CustomField>