force-app/main/default/objects/Loop__DDP__c/fields/Loop__DDP_CC__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP_CC__c</fullName>
    <inlineHelpText>This will default the &apos;CC&apos; field when delivering the DDP via email.Use the Field Tagger to use dynamic email addresses.</inlineHelpText>
    <label>CC</label>
    <type>TextArea</type>
</CustomField>