force-app/main/default/objects/Loop__DDP__c/fields/Loop__Exclude_Queue__c.field-meta.xml
<CustomField>
    <fullName>Loop__Exclude_Queue__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, the user cannot send this DDP to the document queue. The Document Queue allows DDPs to be generated behind the scenes and allows for inter-department fulfillment options.</inlineHelpText>
    <label>Exclude Document Queue Delivery</label>
    <type>Checkbox</type>
</CustomField>