force-app/main/default/objects/Loop__DDP__c/fields/Loop__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Loop__Object_Name__c</fullName>
    <inlineHelpText>Enter the API name of the custom object this DDP should be available from.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>