force-app/main/default/objects/Loop__DDP__c/fields/Loop__Office_Version__c.field-meta.xml
<CustomField>
    <fullName>Loop__Office_Version__c</fullName>
    <description>DDP Files will be processed using this version of Office. This does not need to match the version that the DDP Files were created/modified in.</description>
    <inlineHelpText>DDP Files will be processed using this version of Office. This does not need to match the version that the DDP Files were created/modified in.</inlineHelpText>
    <label>Office Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2003</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
                <default>true</default>
                <label>2010</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>