force-app/main/default/objects/Loop__DDP__c/fields/Loop__RequireAttachment__c.field-meta.xml
<CustomField>
    <fullName>Loop__RequireAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the user must select an attachment to be appended to the DDP. This option requires Allow Attachments to also be selected.</inlineHelpText>
    <label>Require Attachment</label>
    <type>Checkbox</type>
</CustomField>