force-app/main/default/objects/Loop__DDP__c/fields/Loop__RequireContact__c.field-meta.xml
<CustomField>
    <fullName>Loop__RequireContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the user must select a contact to be used with this DDP.</inlineHelpText>
    <label>Contact Selection Required</label>
    <type>Checkbox</type>
</CustomField>