force-app/main/default/objects/Loop__DDP__c/fields/Loop__SecurityType__c.field-meta.xml
<CustomField>
    <fullName>Loop__SecurityType__c</fullName>
    <defaultValue>&quot;profile&quot;</defaultValue>
    <label>SecurityType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>