force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Account.recordType-meta.xml
<RecordType>
    <fullName>Loop__Account</fullName>
    <active>true</active>
    <description>DDP will be available from an Account only</description>
    <label>Account</label>
</RecordType>