force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__API.recordType-meta.xml
<RecordType>
    <fullName>Loop__API</fullName>
    <active>false</active>
    <label>API</label>
</RecordType>