force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Contract.recordType-meta.xml
<RecordType>
    <fullName>Loop__Contract</fullName>
    <active>true</active>
    <description>DDP will be available from a Contract only</description>
    <label>Contract</label>
</RecordType>