force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Lead.recordType-meta.xml
<RecordType>
    <fullName>Loop__Lead</fullName>
    <active>true</active>
    <description>DDP will be available from a Lead only</description>
    <label>Lead</label>
</RecordType>