force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Quote.recordType-meta.xml
<RecordType>
    <fullName>Loop__Quote</fullName>
    <active>true</active>
    <description>DDP will be available from a Quote only</description>
    <label>Quote</label>
</RecordType>