force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Report.recordType-meta.xml
<RecordType>
    <fullName>Loop__Report</fullName>
    <active>true</active>
    <description>DDP will be available as an automated email only</description>
    <label>Report</label>
</RecordType>